--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,9 +5,12 @@ body {
   margin-top: 2em;
 }
 
+table{
+	margin: 1em;
+}
 
 #result{
 	margin-top: 1em;
-	font: 120% $font-text;
+	font: 100% $font-text;
 	line-height: 1.5em;
 }
